--- a/src/components/styles/ProjectDetails.css
+++ b/src/components/styles/ProjectDetails.css
@@ -1,11 +1,28 @@
 
 .projectDetail {
+    display: grid;
+
     margin-left: 10%;
     margin-right: 10%;
     margin-top: 2%;
     margin-bottom: 2%;
+    width: 90%;
+    height: 100%;
 
-    background-color: rgb(226, 226, 226);
+    background-color: #e0e0e0;
+    box-shadow: 5px 5px 5px 2px #85877C;
+    
     color: black;
-    box-shadow: 5px 5px 5px 5px #888888;
+    overflow-wrap: break-word;
+}
+
+.markdown {
+    display: -ms-inline-grid;
+
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    font-size: 15px;
 }
