Fixed bug mentioned in previous commit. The problem was that I had useEffect configured to fire every time the project changed, which happened every time the project was retrieved from the api (I assume), which caused an infinite loop of api calls

--- a/src/components/styles/ProjectDetails.css
+++ b/src/components/styles/ProjectDetails.css
@@ -9,7 +9,7 @@
     width: 90%;
     height: 100%;
 
-    background-color: #e0e0e0;
+    background-color: #eff2f5;
     box-shadow: 5px 5px 5px 2px #8d8d8d;
     
     color: black;
