--- a/src/components/styles/ProjectDetails.css
+++ b/src/components/styles/ProjectDetails.css
@@ -10,7 +10,7 @@
     height: 100%;
 
     background-color: #e0e0e0;
-    box-shadow: 5px 5px 5px 2px #8d8d8d;
+    box-shadow: 5px 5px 5px 2px #85877C;
     
     color: black;
     overflow-wrap: break-word;
